--- a/index.html
+++ b/index.html
@@ -18,19 +18,24 @@
 
         <div class="container2">
             <aside id="aside"><img class="aside_img" src="./img/concert6.png" alt=""></aside>
-            <div id="whole">
-                <nav id="menubar">
-                    <button class="tabs" id="home-button"></button>><img class='nav_img' src="./img/home.png" alt="">홈화면</button>
-                    <button class="tabs" id="lists-button"></button>><img class='nav_img' src="./img/post.png" alt=""> 게시판</button>
-                    <button class="tabs" id="write-button"></button>><img class='nav_img' src="./img/writing.png" alt=""> 글작성</button>
-                </nav>
+            <div id="post-main">
+                <div id="whole">
+                    <nav id="menubar">
+                        <button class="tabs" id="home-button"><img class='nav_img' src="./img/home.png"
+                            alt="">홈화면</button>
+                        <button class="tabs" id="lists-button"><img class='nav_img' src="./img/post.png"
+                            alt=""> 게시판</button>
+                        <button class="tabs" id="write-button"><img class='nav_img' src="./img/writing.png"
+                            alt=""> 글작성</button>
+                    </nav>
+                </div>
+                <section id="write-section"></section>
+                <!--글작성 섹션  -->
+                <section id="confirm-section"></section>
+                <!-- 글 확인? 섹션 -->
+                <section id="lists-section"></section>
+                <!-- 게시판 섹션 -->
             </div>
-            <section id="write-section"></section>
-            <!--글작성 섹션  -->
-            <section id="confirm-section"></section>
-            <!-- 글 확인? 섹션 -->
-            <section id="lists-section"></section>
-            <!-- 게시판 섹션 -->
         </div>
 
         <footer id="footer">
@@ -38,17 +43,6 @@
             <p class="text">made by. 양동원, 이시빈, 조은지</p>
         </footer>
     </div>
-
-    <!-- <div id=whole> 전체 감싸는 div
-        <header id=menubar> 
-            <button class="header_button" id="home-button"><img src="./img/home.png" alt="">홈화면</button>
-            <button class="header_button" id="lists-button"><img src="./img/post.png" alt=""> 게시판</button>
-            <button class="header_button" id="write-button"><img src="./img/writing.png" alt=""> 글작성</button>
-        </header>
-        <section id="write-section"></section>
-        <section id="confirm-section"></section>
-        <section id="lists-section"></section>
-    </div> -->
 </body>
 
 </html>
