--- a/index.html
+++ b/index.html
@@ -28,12 +28,7 @@
                         <button class="tabs" id="write-button"><img class='nav_img' src="./img/writing.png"
                             alt=""> 글작성</button>
                     </nav>
-                        <section id="write-section"></section>
-                        <!--글작성 섹션  -->
-                        <section id="confirm-section"></section>
-                        <!-- 글 확인? 섹션 -->
-                        <section id="lists-section"></section>
-                        <!-- 게시판 섹션 -->
+                    <section id="sections"></section>
                 </div>
             </div>
         </div>
