--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>GreenTea</title>
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/script.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 </head>
 
 <body>
